Se agrego el offcanvas

--- a/src/app/gifs/busqueda/busqueda.component.html
+++ b/src/app/gifs/busqueda/busqueda.component.html
@@ -4,3 +4,9 @@ class="form-control"
 placeholder="Buscar gifs..."
 (keyup.enter)="buscar()"
 #txtBuscar>
+<div class="container d-flex justify-content-center mt-3">
+    <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+        Historial
+      </button>
+</div>
+  
