--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,11 +1,18 @@
-<div class="bg-dark border-right p-3" id="sidebar">
-    <h3 class="text-light">Gifs-App</h3> 
-    <hr class="text-white"/>
-    <div class="list-group list-reset">
-      <a *ngFor="let element of historial" 
-      href="#"
-      (click)="buscar(element)" class="list-group-item list-group-item-action">
-        {{element | titlecase}}
-      </a>
-    </div> 
+
+  <div class="offcanvas offcanvas-start bg-dark border-right p-3" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title text-white" id="offcanvasExampleLabel">Historial</h5>
+      <i class="fas fa-times" data-bs-dismiss="offcanvas" id="cerrar" aria-label="Close"></i>
     </div>
+    <hr class="text-white"/>
+    <div class="offcanvas-body">
+      <div class="list-group list-reset">
+        <a data-bs-dismiss="offcanvas" *ngFor="let element of historial" 
+        href="#"
+        (click)="buscar(element)" class="list-group-item list-group-item-action">
+          {{element | titlecase}}
+          
+        </a>
+      </div> 
+    </div>
+  </div>
